{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 152,
  "lineage": "8092da57-d511-bdea-7e62-c2514aee9309",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "FDQKOgB69Wc=",
            "id": "projects/linen-source-411501/global/securityPolicies/mage-data-prep-security-policy",
            "name": "mage-data-prep-security-policy",
            "project": "linen-source-411501",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Whitelist IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "34.133.60.140/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/securityPolicies/mage-data-prep-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/regions/us-central1/networkEndpointGroups/mage-data-prep-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-25T10:09:38.828-07:00",
            "enable_cdn": false,
            "fingerprint": "pl-8sHFCRYM=",
            "generated_id": 885021977724326205,
            "id": "projects/linen-source-411501/global/backendServices/mage-data-prep-urlmap-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "mage-data-prep-urlmap-backend-default",
            "port_name": "http",
            "project": "linen-source-411501",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/beta/projects/linen-source-411501/global/securityPolicies/mage-data-prep-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/backendServices/mage-data-prep-urlmap-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.117.233.90",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-25T09:55:10.734-07:00",
            "id": "projects/linen-source-411501/global/addresses/mage-data-prep-urlmap-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "mage-data-prep-urlmap-address",
            "prefix_length": 0,
            "project": "linen-source-411501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/addresses/mage-data-prep-urlmap-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/linen-source-411501/global/forwardingRules/mage-data-prep-urlmap",
            "ip_address": "34.117.233.90",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "mage-data-prep-urlmap",
            "port_range": "80-80",
            "project": "linen-source-411501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/forwardingRules/mage-data-prep-urlmap",
            "target": "https://www.googleapis.com/compute/beta/projects/linen-source-411501/global/targetHttpProxies/mage-data-prep-urlmap-http-proxy"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-25T10:10:22.247-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/linen-source-411501/global/targetHttpProxies/mage-data-prep-urlmap-http-proxy",
            "name": "mage-data-prep-urlmap-http-proxy",
            "project": "linen-source-411501",
            "proxy_bind": false,
            "proxy_id": 6326068573306097937,
            "self_link": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/targetHttpProxies/mage-data-prep-urlmap-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/urlMaps/mage-data-prep-urlmap-url-map"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-25T10:10:11.253-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/backendServices/mage-data-prep-urlmap-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "7LiPJVzzmgs=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/linen-source-411501/global/urlMaps/mage-data-prep-urlmap-url-map",
            "map_id": 5666228976640332060,
            "name": "mage-data-prep-urlmap-url-map",
            "path_matcher": [],
            "project": "linen-source-411501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/linen-source-411501/global/urlMaps/mage-data-prep-urlmap-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    }
  ]
}